mis archivos de aprendisaje

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-      <script defer src="./app.js"></script>
+      <!-- <script defer src="./app.js"></script> -->
+      <script defer src="logicaDeprogramacion.js"></script>
     <!-- <script defer src="./script.js"></script> -->
 </head>
 
@@ -56,13 +57,35 @@
 
 
 
+    <h1 id="excuses"></h1>
 
 
 
 
 
+
+
+
+<h1>Bienvenido al juego</h1>
+
+<button class="btn">juegar</button>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
     <script src="script.js"></script>
 </body>
 
 </html>
+
+
+
+
+
+
+
