agregando archivo tambien  un gitignore

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
       <!-- <script defer src="./app.js"></script> -->
-      <script defer src="logicaDeprogramacion.js"></script>
+      <!-- <script defer src="logicaDeprogramacion.js"></script> -->
+      <!-- <script defer src="app.js"></script> -->
+    
     <!-- <script defer src="./script.js"></script> -->
 </head>
 
@@ -57,7 +59,12 @@
 
 
 
-    <h1 id="excuses"></h1>
+    <div class="conti">
+        <div id="user-list"></div> 
+
+    </div>
+
+
 
 
 
@@ -77,6 +84,17 @@
 <br>
 <br>
 <br>
+
+
+<form action="" id="button" class="formal">
+    <label for="city">city</label>
+    <input type="text" class="inputo" id="city">
+    <button type="submit" id="button" class="button">Enviar</button>
+</form>
+
+<!-- <div id="domaine">hola</div> -->
+
+
 
     <script src="script.js"></script>
 </body>
